--- a/src/assets/scss/_basics.scss
+++ b/src/assets/scss/_basics.scss
@@ -3,6 +3,10 @@
 * {
     position: relative;
     box-sizing: border-box;
+    // will-change: color background-color background-image background-position padding margin font-size border flex align-items justify-content letter-spacing;
+    // transition: color background-color background-image padding margin font-size border flex align-items justify-content letter-spacing .2s ease-in-out;
+    will-change: all;
+    transition: all .2s ease-in-out;
 }
 
 .h1 {
@@ -42,4 +46,20 @@
 
 .uppercase {
     text-transform: uppercase;
+}
+
+@media (min-width: 576px) and (max-width: 991.98px){ 
+    .h1 {
+        font-size: 130px;
+    }
+
+   .h5 {
+        font-size: 20px;
+        letter-spacing: 3.38px;
+    }
+
+    .body-text {
+        font-size: 16px;
+        line-height: 28px;
+    }
 }
