--- a/src/assets/scss/_landing.scss
+++ b/src/assets/scss/_landing.scss
@@ -5,9 +5,7 @@
 body {
     font-family: variables.$barlow;    
     height: 100vh;
-    background-image: url('../img/home/background-home-desktop.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
+    
     margin: 0;
     color: variables.$accent;
 }
@@ -17,13 +15,17 @@ main#landingPage {
     flex-direction: column;
     justify-content: space-between;
     height: 100vh;
+    background-image: url('../img/home/background-home-desktop.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
     
     .main-content {
-        padding: 2vmin 15vmin 13vmin 15vmin;
+        padding: 2vh 10vw 13vh 10vw;
         display: flex;
         justify-content: space-between;
         align-items: flex-end;
         flex-wrap: wrap;
+        height: 100vh;
         
         aside.headline {
             display: flex;
@@ -42,3 +44,38 @@ main#landingPage {
     }
 }
 
+// @media (min-width: 992px) { 
+    
+// }
+
+@media (min-width: 768px) and (max-width: 991.98px){ 
+    main#landingPage {
+        background-image: url('../img/home/background-home-tablet.jpg');
+        background-position-y: -180px;
+        .main-content {
+            padding: 2vh 7vw 0 7vw;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-around;
+
+            aside.headline {
+                align-items: center;
+                text-align: center;
+                gap: .5rem;
+            }
+
+            aside.button-side {
+                a.rounded-btn {
+                    margin: 3rem 3rem 2.4rem 3rem;
+                    height: 15rem ;
+                    width: 15rem;
+                }
+            }
+        }
+    }
+}
+
+
+@media (max-width: 575.98px) { 
+
+}
