--- a/src/assets/scss/_navbar.scss
+++ b/src/assets/scss/_navbar.scss
@@ -8,22 +8,22 @@ nav.navigation {
     hr {
         position: absolute;
         background-color: #FFFFFF50;
-        width: 35%;
+        width: 32vw;
         height: 1px;
         border: none;
         z-index: 1;
-        left: 13%;
+        left: 15vw;
     }
 
     ul {
         -webkit-backdrop-filter: blur(10px);
         backdrop-filter: blur(10px);
         background-color: #ffffff07;
-        padding:0 15vmin 0 10vmin;
+        padding:0 10vw 0 7vw;
         margin: 0;
         width: -moz-fit-content;
         width: fit-content;
-        gap: 3vmin;
+        gap: 1.7vw;
 
         li {
             margin: 0 10px;
@@ -33,18 +33,42 @@ nav.navigation {
     }
 }
 
+
+// @media (min-width: 992px) { 
+    
+// }
+
+@media (min-width: 768px) and (max-width: 991.98px){ 
+    nav.navigation {
+        padding: 0 0 0 50px;
+
+        hr {
+            display: none;
+        }
+
+        ul {
+            padding:0 7vw 0 7vw;
+            gap: 1.7vw;
+
+            li {
+                padding: 37px 0;
+            }
+        }
+    
+    }
+}
+
+@media (min-width: 576px) and (max-width: 767.98px){ 
+    nav.navigation {
+        hr {
+            display: none;
+        }
+        ul {
+            display: none;
+        }
+    }
+}
+
 @media (max-width: 575.98px) { 
-
-}
-
-@media (min-width: 576px) { 
-
-}
-
-@media (min-width: 768px) { 
-
-}
-
-@media (min-width: 992px) { 
 
 }
