--- a/src/assets/scss/_basics.scss
+++ b/src/assets/scss/_basics.scss
@@ -3,10 +3,10 @@
 * {
     position: relative;
     box-sizing: border-box;
-    // will-change: color background-color background-image background-position padding margin font-size border flex align-items justify-content letter-spacing;
-    // transition: color background-color background-image padding margin font-size border flex align-items justify-content letter-spacing .2s ease-in-out;
-    will-change: all;
-    transition: all .2s ease-in-out;
+    will-change: color background-color background-image background-position padding margin font-size border flex align-items justify-content letter-spacing;
+    transition: color background-color background-image padding margin font-size border flex align-items justify-content letter-spacing .2s ease-in-out;
+    // will-change: all;
+    // transition: all .2s ease-in-out;
 }
 
 .h1 {
@@ -61,5 +61,21 @@
     .body-text {
         font-size: 16px;
         line-height: 28px;
+    }
+}
+
+@media (max-width: 575.98px) { 
+    .h1 {
+        font-size: 100px;
+    }
+
+    .h5 {
+        font-size: 16px;
+        letter-spacing: 2.7px;
+    }
+
+    .body-text {
+        font-size: 14px;
+        line-height: 24px;
     }
 }
