--- a/src/assets/scss/_landing.scss
+++ b/src/assets/scss/_landing.scss
@@ -53,6 +53,7 @@ main#landingPage {
         background-image: url('../img/home/background-home-tablet.jpg');
         background-position-y: -180px;
         .main-content {
+            height: 100%;
             padding: 2vh 7vw 0 7vw;
             flex-direction: column;
             align-items: center;
@@ -76,6 +77,30 @@ main#landingPage {
 }
 
 
-@media (max-width: 575.98px) { 
+@media (max-width: 767.98px) { 
+    main#landingPage {
+        background-image: url('../img/home/background-home-mobile.jpg');
+        padding-top: 0;
 
+        .main-content {
+            padding: 2vh 7vw 0 7vw;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-around;
+
+            aside.headline {
+                align-items: center;
+                text-align: center;
+                gap: .5rem;
+            }
+
+            aside.button-side {
+                a.rounded-btn {
+                    margin: 3rem 3rem 2.4rem 3rem;
+                    height: 15rem ;
+                    width: 15rem;
+                }
+            }
+        }
+    }
 }
