--- a/src/assets/scss/_landing.scss
+++ b/src/assets/scss/_landing.scss
@@ -5,7 +5,7 @@
 body {
     font-family: variables.$barlow;    
     height: 100vh;
-    
+    background-color: black;
     margin: 0;
     color: variables.$accent;
 }
@@ -18,6 +18,7 @@ main#landingPage {
     background-image: url('../img/home/background-home-desktop.jpg');
     background-size: cover;
     background-repeat: no-repeat;
+    overflow: hidden;
     
     .main-content {
         padding: 2vh 10vw 13vh 10vw;
