--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -34,6 +34,7 @@
                 color: variables.$accent;
                 text-transform: uppercase;
                 font-weight: 300;
+                height: 100%;
 
                 b {
                     height: fit-content;
