--- a/src/assets/scss/_pageTitle.scss
+++ b/src/assets/scss/_pageTitle.scss
@@ -7,8 +7,19 @@ h5.pageTitle {
     text-transform: uppercase;
     margin: 0;
     color: variables.$secondary;
+    padding: 4rem 10rem 0 11vw;
 
     b {
         color: #FFFFFF50;
+    }
+
+    @media (min-width: 768px) and (max-width: 991.98px){ 
+        padding: 4rem 0 0 0;
+    }
+
+    @media (max-width: 767.98px) {
+        padding: 1.5rem 0 0 0;
+        font-size: 22px;
+        text-align: center;
     }
 }
