--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -6,6 +6,7 @@ $barlow: 'Barlow Condensed', sans-serif;
 $h1: 150px 'Bellefair', serif;
 $h2: 100px 'Bellefair', serif;
 $h3: 56px 'Bellefair', serif;
+$h45: 40px 'Bellefair', serif;
 $h4: 32px 'Bellefair', serif;
 $h5: 28px 'Barlow Condensed', serif;
 $sh1: 28px 'Bellefair', serif;
